--- a/f1racers.html
+++ b/f1racers.html
@@ -186,7 +186,7 @@
             for(i = 0; i<10; ++i)
             {
                 document.write("<img src='img/carro.png'>");
-                document.write("Nome do pilto: "+ gridNome[i] + " | Número do carro: " + gridNum[i] + "<br>");
+                document.write("Nome do piloto: "+ gridNome[i] + " | Número do carro: " + gridNum[i] + "<br>");
             }
             document.write("</center>");
 
